# bitcoin

src/secp256k1/: CMakeLists.txt
src/secp256k1/src/: CMakeLists.txt
src/secp256k1/src/modules/ecdh/: CMakeLists.txt
src/secp256k1/src/modules/extrakeys/: CMakeLists.txt
src/secp256k1/src/modules/recovery/: CMakeLists.txt
src/secp256k1/src/modules/schnorrsig/: CMakeLists.txt
test/functional/test_framework/: messages.py
test/lint/: lint-python.sh
